add: find trip by id